--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -19,6 +19,8 @@ jobs:
   # This workflow contains a single job called "scan"
   scan:
     permissions:
+    #===Supress Rules:====
+    #checkov:skip=CKV2_GHA_1: Permissions scoped appropriately at job level
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
