--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -3,6 +3,9 @@
 
 name: checkov
 
+permissions:
+  contents: read
+
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -19,7 +22,7 @@ jobs:
   # This workflow contains a single job called "scan"
   scan:
     permissions:
-    #===Supress Rules:====
+    #===Suppression Rules:====
     #checkov:skip=CKV2_GHA_1: Permissions scoped appropriately at job level
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
