--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -42,6 +42,8 @@ jobs:
           # This will add both a CLI output to the console and create a results.sarif file
           output_format: cli,sarif
           output_file_path: console,results.sarif
+          hard_fail_on: HIGH # only fails on HIGH
+          enable_secrets_scan_all_files: true   # shows severity
         
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v4
@@ -54,4 +56,3 @@ jobs:
         if: success() || failure()
         with:
           sarif_file: results.sarif
-          enable_secrets_scan_all_files: true #Shows severity
