--- a/.github/workflows/terraform_checkov.yml
+++ b/.github/workflows/terraform_checkov.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          role-to-assume: ${{ vars.AWS_ROLE }}
           aws-region: ${{ vars.AWS_REGION }}
 
       - name: Setup Terraform
@@ -68,8 +68,8 @@ jobs:
       - name: Terraform Init
         run: |
           terraform init \
-            -backend-config="bucket=${{ vars.TF_STATE_BUCKET }}" \
-            -backend-config="key=${{ vars.TF_STATE_KEY }}" \
+            -backend-config="bucket=${{ vars.AWS_BUCKET_NAME }}" \
+            -backend-config="key=${{ vars.AWS_BUCKET_KEY_NAME }}" \
             -backend-config="region=${{ vars.AWS_REGION }}"
 
       - name: Terraform Validate
