--- a/.github/workflows/terraform_checkov.yml
+++ b/.github/workflows/terraform_checkov.yml
@@ -8,24 +8,28 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
   id-token: write
+  contents: read
+  pull-requests: write
   security-events: write
+
+env:
+  TF_LOG: INFO
+  AWS_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
 
   # =========================
-  # CHECKOV SCAN
+  # SECURITY SCAN
   # =========================
   scan:
     name: Checkov Scan
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Run Checkov
-        id: checkov
         uses: bridgecrewio/checkov-action@v12
         with:
           output_format: cli,sarif
@@ -46,36 +50,44 @@ jobs:
     name: Terraform Apply
     runs-on: ubuntu-latest
     needs: scan
-    # If Checkov fails → deploy NEVER runs | If Checkov passes → deploy runs | High findings+ → blocked
-    if: needs.scan.result == 'success' && github.ref == 'refs/heads/main'    
+    if: needs.scan.result == 'success' && github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: .
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Git checkout
+        uses: actions/checkout@v4
 
-      # 🔐 Configure AWS via OIDC
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials from AWS account
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ vars.AWS_ROLE }}
-          aws-region: ${{ vars.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          role-session-name: GitHub-OIDC-TERRAFORM
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.4.6
+          terraform_version: 1.14
 
       - name: Terraform Init
+        env:
+          AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+          AWS_BUCKET_KEY_NAME: ${{ secrets.AWS_BUCKET_KEY_NAME }}
         run: |
           terraform init \
-            -backend-config="bucket=${{ vars.AWS_BUCKET_NAME }}" \
-            -backend-config="key=${{ vars.AWS_BUCKET_KEY_NAME }}" \
-            -backend-config="region=${{ vars.AWS_REGION }}"
+            -backend-config="bucket=${AWS_BUCKET_NAME}" \
+            -backend-config="key=${AWS_BUCKET_KEY_NAME}" \
+            -backend-config="region=${AWS_REGION}"
 
       - name: Terraform Validate
-        run: terraform validate
+        run: terraform validate -no-color
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
+        run: terraform plan -no-color -out=tfplan
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve -input=false tfplan
