--- a/.github/workflows/terraform_checkov.yml
+++ b/.github/workflows/terraform_checkov.yml
@@ -49,8 +49,8 @@ jobs:
         with:
           output_format: cli,sarif
           output_file_path: console,results.sarif
-          hard_fail_on: LOW # THIS IS NOT WORKING | IT STILL PASSES WITH FINDINGS --> NEED TO FIX !!! #CRITICAL, HIGH, MEDIUM, LOW, INFO
-          fail_on_error: true
+          #hard_fail_on: LOW # THIS IS NOT WORKING | IT STILL PASSES WITH FINDINGS --> NEED TO FIX !!! #CRITICAL, HIGH, MEDIUM, LOW, INFO
+          #fail_on_error: true
 
       - name: Upload SARIF as artifact
         uses: actions/upload-artifact@v4
