--- a/.github/workflows/terraform_checkov.yml
+++ b/.github/workflows/terraform_checkov.yml
@@ -49,6 +49,7 @@ jobs:
         with:
           output_format: cli,sarif
           output_file_path: console,results.sarif
+          # Without hard_fail_on the workflow will fail with any findings
           #hard_fail_on: LOW # THIS IS NOT WORKING | IT STILL PASSES WITH FINDINGS --> NEED TO FIX !!! #CRITICAL, HIGH, MEDIUM, LOW, INFO
           #fail_on_error: true
 
